# ferrum

./: CMakeLists.txt  Cargo.toml  README.md  main.cpp  utils.h
.cargo/: config.toml
src/: main.rs
