[package]
name = "ferrum"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = "1.0.217"
serde_json = "1.0.137"
zip = { version = "2.2.2", features = ["deflate"] }
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }
fomat-macros = "0.3.2"
urlencoding = "2.1.3"
tokio-stream = "0.1.17"
const_format = { version = "0.2.34", features = [] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
# bonus points: upx --best --ultra-brute -q output.exe